--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,12 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
-    <!-- Base application theme. -->
     <style name="AppDefault" parent="AppTheme">
         <item name="colorPrimary">@color/colourPrimary</item>
         <item name="colorPrimaryDark">@color/colourPrimaryDark</item>
         <item name="colorControlNormal">@color/colorWhite</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
-
-
 </resources>
