--- a/app/src/main/res/values/colours.xml
+++ b/app/src/main/res/values/colours.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colourPrimary">#00acc1</color>
+    <color name="colourPrimary">#0097A7</color>
     <color name="colourPrimaryDark">#008a9a</color>
     <color name="mainBackground">#e2e2e2</color>
     <color name="colorWhite">#ffffff</color>
