--- a/app/src/main/res/layout/remind_item.xml
+++ b/app/src/main/res/layout/remind_item.xml
@@ -6,13 +6,17 @@
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
     android:layout_marginLeft="12dp"
-    android:layout_marginRight="12dp">
+    android:layout_marginRight="12dp"
+    android:paddingBottom="0dp"
+    android:paddingTop="0dp"
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cardView"
         card:cardElevation="2dp"
+        card:cardMaxElevation="2dp"
         card:cardUseCompatPadding="true">
 
         <LinearLayout
